[package]
name = "pixel_art_editor"
version = "0.1.0"
authors = ["imakebank2"]
edition = "2024"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[dependencies]
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "glow"      
] }

log = "0.4.27"