[package]
name = "pixel_art_editor"
version = "0.1.0"
authors = ["imakebank2"]
edition = "2024"
include = ["LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.88"

[dependencies]
egui = "0.33.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["png"] }
eframe = { version = "0.33.0", default-features = false, features = [
    "default_fonts",
    "glow",      
] }

# For debugging:
log = "0.4.29"
env_logger = "0.11.8"

rfd = "0.17.2"
